--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-config-standard": "^12.0.0",
+    "eslint-loader": "^2.1.1",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
@@ -35,6 +37,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "eslint-plugin-html": "^4.0.6",
+    "eslint-plugin-jsx": "0.0.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
