--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/",
     "build:client": "cross-env NODE_ENV=production webpack --config config/webpack.config.client.js --mode development",
     "build": "npm run clean && npm run build:client",
+    "precommit": "npm run lint",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --config config/webpack.config.client.js --mode development"
   },
   "author": "",
@@ -41,6 +42,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.1.3",
     "postcss-loader": "^3.0.0",
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.1",
