--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
     "build": "npm run clean && npm run build:client",
     "precommit": "npm run lint-fix",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js"
+    "dev:src": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
+    "dev:server": "cross-env NODE_ENV=development node server/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "acorn": "^6.0.4",
     "axios": "^0.18.0",
     "ejs": "^2.6.1",
     "koa": "^2.6.2",
