--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.6.1",
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
+    "koa-send": "^5.0.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.17",
