--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rimraf dist",
+    "clean": "rimraf public && rimraf server-build",
     "practice": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.practice.js",
-    "lint": "eslint --ext .js --ext .jsx --ext .vue src/",
-    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/",
+    "lint": "eslint --ext .js --ext .jsx --ext .vue client/",
+    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue client/",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.config.client.js",
-    "build": "npm run clean && npm run build:client",
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.config.server.js",
+    "build": "npm run clean && npm run build:client && npm run build:server",
     "precommit": "npm run lint-fix",
     "dev:src": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
-    "dev:server": "cross-env NODE_ENV=development node server/server.js"
+    "dev:server": "nodemon server/server.js",
+    "dev": "concurrently \"npm run dev:src\" \"npm run dev:server\"",
+    "start": "cross-env NODE_ENV=production node server/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +28,7 @@
     "koa-router": "^7.4.0",
     "koa-send": "^5.0.0",
     "vue": "^2.5.17",
+    "vue-meta": "^1.5.5",
     "vue-router": "^3.0.1",
     "vue-server-renderer": "^2.5.17",
     "vuex": "^3.0.1"
@@ -40,6 +44,7 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
+    "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
     "eslint": "^5.8.0",
@@ -56,6 +61,7 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.1.3",
     "memory-fs": "^0.4.1",
+    "nodemon": "^1.18.6",
     "postcss-loader": "^3.0.0",
     "rimraf": "^2.6.2",
     "style-loader": "^0.23.1",
