--- a/package.json
+++ b/package.json
@@ -37,16 +37,18 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.6",
     "autoprefixer": "^9.3.1",
+    "@babel/core": "^7.1.6",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^8.0.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-1": "^7.0.0-alpha.1",
     "concurrently": "^4.1.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
