--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.config.server.js",
     "build": "npm run clean && npm run build:client && npm run build:server",
     "precommit": "npm run lint-fix",
-    "dev:src": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
+    "dev:client": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.config.client.js",
     "dev:server": "nodemon server/server.js",
-    "dev": "concurrently \"npm run dev:src\" \"npm run dev:server\"",
+    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "start": "cross-env NODE_ENV=production node server/server.js"
   },
   "author": "",
